--- a/.travis.yml
+++ b/.travis.yml
@@ -84,15 +84,10 @@ install:
  - python setup.py install --prefix ${PYTHONUSERBASE}
 
 before_script:
- - ulimit -c unlimited -S
- - RESULT=0
- - python test/run_tests.py || RESULT=$?
- - ls -l .
- - for i in $(find ./ -maxdepth 1 -name 'core*' -print); do gdb $(which python) $i -ex "thread apply all bt" -ex "set pagination 0" -batch; done;
- - if [[ ${RESULT} != 0 ]]; then exit $RESULT; fi
+ - python test/run_tests.py
+ - python test/visual.py -q
 
 script:
- - python test/visual.py -q
  - |
    if [[ ${COMMIT_MESSAGE} =~ "[publish]" ]]; then
      python setup.py bdist_wheel
